--- a/src/advanced-analysis.html
+++ b/src/advanced-analysis.html
@@ -15,9 +15,192 @@
     <main class="wrapper">
         <div class="container">
             <header></header>
-              <section>
+            <section class="dataCollection advancedAnalysis" id="dataCollection">
+                <h2>Advanced Analysis</h2>
+                <p class="p-head">
+                    Our advanced analysis of dark web data involves using sophisticated methods, tools, and techniques
+                    to extract, process, and interpret actionable intelligence from dark web forums, marketplaces,
+                    chatrooms, and other hidden sections.
+                    This type of panoramic analysis helps in identifying potential threats, understanding cybercriminal
+                    behavior, and protecting our clients against the most challenging cyber risks.
 
-              </section>
+                </p>
+                <ul class="dataCollection-list">
+                    <li class="dataCollection-item">
+                        <h3>Data Extraction and Aggregation</h3>
+                        <ul>
+                            <li>
+                                Process: Collect raw data from dark web marketplaces, forums, and chatrooms.
+                            </li>
+                            <li>
+                                Tools: Automated crawlers, scrapers
+                            </li>
+                            <li>
+                                Example: A scraper gathers product listings from a dark web marketplace selling stolen credit card information. The tool extracts fields like card type, price, and seller ratings.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/web.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Threat Actor Profiling</h3>
+                        <ul>
+                            <li>
+                                Process: Identify and monitor key players or groups active on the dark web.
+                            </li>
+                            <li>
+                                Focus: Behavior patterns, aliases, frequency of activity, and social connections.
+                            </li>
+                            <li>
+                                Example: A threat actor, known by a specific alias, is linked to multiple ransomware campaigns through forum discussions and transaction records. Analysts build a dossier by aggregating their forum posts and associated wallet addresses.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Threat-Actor-Profiling.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Marketplace Analysis</h3>
+                        <ul>
+                            <li>
+                                Process: Study trends in goods and services traded on dark web marketplaces.
+                            </li>
+                            <li>
+                                Focus: Prices, volumes, and new product offerings.
+                            </li>
+                            <li>
+                                Tools: Data visualization platforms to analyze price changes, popularity, and emerging threats.
+                            </li>
+                            <li>
+                                Example: Analysts observe a sudden increase in listings for zero-day vulnerabilities targeting IoT devices. This indicates an emerging threat to businesses using connected devices.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Marketplace-Analysis.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Content Analysis</h3>
+                        <ul>
+                            <li>
+                                Process: Use natural language processing (NLP) to analyze discussions, reviews, and messages for intent and sentiment.
+                            </li>
+                            <li>
+                                Focus: Keywords indicating planned attacks, new malware, or tools.
+                            </li>
+                            <li>
+                                Example: By analyzing forum posts, NLP identifies recurring terms like "phishing kit," "zero-day," or "bulk RDP accounts," indicating preparations for large-scale cyberattacks.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Content-Analysis.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Sentiment and Behavioral Analysis</h3>
+                        <ul>
+                            <li>
+                                Process: Assess tone, intent, and trust levels in conversations to predict risks.
+                            </li>
+                            <li>
+                                Focus: Detect escalating hostility or collaborative planning of attacks.
+                            </li>
+                            <li>
+                                Example: Analysts monitor extremist forums for radical rhetoric. Changes in sentiment indicate an increased risk of coordinated physical attacks.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Sentiment-and-Behavioral-Analysis.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Linkage and Correlation Analysis</h3>
+                        <ul>
+                            <li>
+                                Process: Correlate data across sources, linking actors, tools, and transactions.
+                            </li>
+                            <li>
+                                Focus: Identifying patterns, collaboration between groups, or connections to surface web activity.
+                            </li>
+                            <li>
+                                Example: Analysis links stolen corporate credentials sold on a dark web forum to an earlier phishing campaign - by mapping email addresses from the breach to public databases.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Linkage-and-Correlation-Analysis.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Cryptocurrency Tracking</h3>
+                        <ul>
+                            <li>
+                                Process: Monitor cryptocurrency transactions to trace payments related to illegal activities.
+                            </li>
+                            <li>
+                                Focus: Identify wallets, transaction chains, and laundering activities.
+                            </li>
+                            <li>
+                                Example: Analysts track Bitcoin transactions from ransomware payments and discover laundering through a specific mixer service, which they report to authorities.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Cryptocurrency-Tracking.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Malware Analysis</h3>
+                        <ul>
+                            <li>
+                                Process: Monitor dark web discussions and marketplace listings for new malware or exploits.
+                            </li>
+                            <li>
+                                Focus: Analyzing samples to understand capabilities, origin, and potential targets.
+                            </li>
+                            <li>
+                                Example: A dark web listing offers a new malware strain. Analysts purchase and analyze the malware in a sandbox, discovering it targets cloud storage services.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Malware-Analysis.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Predictive Analytics</h3>
+                        <ul>
+                            <li>
+                                Process: Use historical data and machine learning models to predict future trends.
+                            </li>
+                            <li>
+                                Focus: Emerging threats, new technologies, or target sectors.
+                            </li>
+                            <li>
+                                Example: Predictive models indicate a likely increase in attacks on financial institutions after analyzing dark web chatter about vulnerabilities in popular banking software.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Predictive-Analytics.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Data Visualization and Reporting</h3>
+                        <ul>
+                            <li>
+                                Process: Transform complex data into accessible dashboards or reports.
+                            </li>
+                            <li>
+                                Focus: Highlight actionable insights for stakeholders.
+                            </li>
+                            <li>
+                                Example: A dashboard shows geographic trends in ransomware purchases, highlighting that organizations in Europe are at higher risk due to targeted campaigns.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Data-Visualization-and-Reporting .webp" alt="">
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </div>
     </main>
     <footer class="footer"></footer>
