--- a/src/data-collection.html
+++ b/src/data-collection.html
@@ -15,9 +15,174 @@
     <main class="wrapper">
         <div class="container">
             <header></header>
-              <section>
-
-              </section>
+            <section class="dataCollection" id="dataCollection">
+                <h2>Data Collection</h2>
+                <p class="p-head">
+                    It is our tradition to go above and beyond - to fulfil the unique needs of our clients.
+                    There are two main factors in our work that enable us to achieve that:
+                </p>
+                <ul class="dataCollection-list">
+                    <li class="dataCollection-item">
+                        <h3>Custom Solutions</h3>
+                        <ul>
+                            <li>
+                                Our engineers continuously build tailored scrapers or bots with powerful new generation
+                                tools.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/custom-solution.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>AI-Powered Analysis</h3>
+                        <ul>
+                            <li>
+                                We use machine learning to analyze data trends, detect anomalies, and generate insights.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/AI depiction.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Deep Web</h3>
+                        <ul>
+                            <li>
+                                Refers to areas of the internet not indexed by search engines.
+                            </li>
+                            <li>
+                                Includes databases, academic archives, and private forums.
+                            </li>
+                            <li>
+                                Useful for gathering industry-specific research, threat intelligence, or monitoring
+                                private data leaks.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/web 2.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Dark Web</h3>
+                        <ul>
+                            <li>
+                                Encrypted and anonymized parts of the internet, accessible through specialized tools.
+                            </li>
+                            <li>
+                                Often used for illegal activities, making it a hub for cybercrime intelligence (e.g.,
+                                stolen data, hacking tools, illicit transactions).
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/dark web.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Chatrooms</h3>
+                        <ul>
+                            <li>
+                                Includes platforms like Discord, IRC, and forums used for specific niche discussions.
+                            </li>
+                            <li>
+                                Can provide real-time monitoring of discussions related to hacking, activism, or
+                                emerging threats.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/chatrooms.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Messaging and Calling Apps</h3>
+                        <ul>
+                            <li>
+                                Includes exclusive WhatsApp and Signal collections, among typical others.
+                            </li>
+                            <li>
+                                Can deliver valuable information for government agencies, especially in the context of
+                                physical security. Will be useful to private companies as well, while strategic planning
+                                amidst global developments, activism, hacktivism and similar events.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Messaging and Calling Apps.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Social Media</h3>
+                        <ul>
+                            <li>
+                                Platforms like Twitter, Reddit, and LinkedIn for open-source intelligence (OSINT) and
+                                beyond.
+                            </li>
+                            <li>
+                                Useful for trend analysis, public sentiment, and identifying phishing attempts or scams;
+                                fraud and threat activities might also be detected.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Social Media.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Cyber Threat Intelligence</h3>
+                        <ul>
+                            <li>
+                                Monitoring for breaches, compromised credentials, and discussions of exploits.
+                            </li>
+                            <li>
+                                Identifying individuals or groups planning attacks or discussing vulnerabilities.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/threat actor 1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Brand Protection</h3>
+                        <ul>
+                            <li>
+                                Detecting counterfeit goods, leaked intellectual property, or slanderous posts.
+                            </li>
+                            <li>
+                                Responding to threats to organizational reputation.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/threat actor 2.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Market Research</h3>
+                        <ul>
+                            <li>
+                                Understanding consumer sentiment or industry trends through forums and social media.
+                            </li>
+                            <li>
+                                Identifying emerging markets or unmet needs based on discussions in niche communities.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/market-research.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Law Enforcement</h3>
+                        <ul>
+                            <li>
+                                Evidence gathering for legal actions against cybercriminals.
+                            </li>
+                            <li>
+                                Investigating criminal activity or coordinating with authorities for threat mitigation.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/phoenix soaring.jpg" alt="">
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </div>
     </main>
     <footer class="footer"></footer>
