--- a/src/smart-and-innovative-ai-app.html
+++ b/src/smart-and-innovative-ai-app.html
@@ -15,9 +15,136 @@
     <main class="wrapper">
         <div class="container">
             <header></header>
-              <section>
-
-              </section>
+            <section class="dataCollection appliaction">
+                <h2>Smart and Innovative AI Application</h2>
+                <p class="p-head">
+                    Artificial Intelligence (AI) is transforming the cybersecurity landscape by automating threat
+                    collection, enhancing intelligence analysis, and enabling smarter tactical and strategic planning.
+                    By integrating AI-driven tools with human expertise, organizations can build resilient defenses
+                    against evolving cyber threats.
+                    Here is how we harness the power of AI to achieve the most desirable results for the benefit of our
+                    clients.
+                </p>
+                <p class="p-head-sub">
+                    AI enhances the analysis of collected data, transforming it into actionable intelligence for
+                    informed decision-making. This utilization includes Natural Language Processing (NLP) - extracting
+                    insights from unstructured data (such as dark web chatter or internal communications). By analyzing
+                    millions of global sources in real time, AI detects global emerging threat trends.
+                    AI also conducts behavioral analysis - by tracking threat actor movements, correlating activities to
+                    predict their next moves, and malware analysis. In case of malware there is innovative approach, in
+                    which AI detects polymorphic malware by identifying patterns that evade traditional signature-based
+                    detection. A typical use case for the efficiency of this method would be when AI system ingests
+                    open-source and proprietary threat feeds, uses NLP to rank threats based on sentiment analysis, and
+                    flags indicators of a coordinated phishing campaign targeting financial institutions.
+                </p>
+                <ul class="dataCollection-list">
+                    <li class="dataCollection-item">
+                        <h3>AI in Cyber Threat Collections</h3>
+                        <ul>
+                            <li>
+                                AI-powered tools automate the collection of vast amounts of data from diverse sources,
+                                providing deeper insights and reducing the burden on human analysts.
+                                These applications mainly include automated web scraping and monitoring, real-time log
+                                analysis and threat actor profiling.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/cybersance-ai cooperation.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>AI in Tactical Planning</h3>
+                        <ul>
+                            <li>
+                                AI plays an important part in tactical planning, which involves real-time responses to
+                                ongoing threats. AI enhances speed, accuracy, and adaptability in these scenarios.
+                                Tactical applications of AI include automatic threat detection and response, threat
+                                hunting and simulations of threat scenarios.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/AI in Tactical Planning.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>AI in Strategic Planning</h3>
+                        <ul>
+                            <li>
+                                Strategic planning leverages AI for long-term defense, risk management, and alignment
+                                with business objectives. In this context AI can be used for predictive analytics, risk
+                                scoring and prioritization and scenario planning. A typical use case is, for example,
+                                when AI identifies trends suggesting an uptick in ransomware activity against a specific
+                                sector. It recommends investing in advanced backup solutions and employee training as
+                                proactive measures.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/AI in Strategic Planning.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Key Innovations in AI-Driven Cybersecurity</h3>
+                        <ul>
+                            <li>
+                                We also practically incorporate in our workflow key innovations in AI-driven
+                                cybersecurity.
+                                This includes self-learning threat models, context aware intelligence, cross-domain
+                                correlation, and AI-enhanced incident forensics.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/human-ai cooperation 1.jpg" alt="Key Innovations in AI-Driven Cybersecurity">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Self-Learning Threat Models</h3>
+                        <ul>
+                            <li>
+                                AI learns from each incident to improve future threat detection and response accuracy.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Self-Learning Threat Models.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Context-Aware Intelligence</h3>
+                        <ul>
+                            <li>
+                                AI distinguishes between real threats and noise by considering context, reducing false
+                                positives.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Context-Aware Intelligence.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>Cross-Domain Correlation</h3>
+                        <ul>
+                            <li>
+                                AI connects the dots between seemingly unrelated events across networks, devices, and
+                                geographies.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/Cross-Domain Correlation.webp" alt="">
+                        </div>
+                    </li>
+                    <li class="dataCollection-item">
+                        <h3>AI-Enhanced Incident Forensics</h3>
+                        <ul>
+                            <li>
+                                AI automates post-incident investigations, identifying root causes, methods, and
+                                vulnerabilities.
+                            </li>
+                        </ul>
+                        <div class="d-block">
+                            <img src="images/services/AI-Enhanced Incident Forensics.webp" alt="">
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </div>
     </main>
     <footer class="footer"></footer>
